# scaffer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  scaffer.json
.github/workflows/: ci.yml  release.yml
examples/rust-lib/: Cargo.toml
examples/rust-lib/src/: lib.rs  scf_project.rs  utils.rs
src/: config.rs  generator.rs  main.rs  template.rs  utils.rs
