[package]
name = "scaffer-rs"
version = "0.1.0"
edition = "2024"
description = "A scaffolding tool for generating code from templates - Rust clone of scaffer"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/scaffer-rs"
keywords = ["scaffolding", "templates", "code-generation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "scaffer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
zip = "0.6"
anyhow = "1.0"
dialoguer = "0.11"
tempfile = "3.8"
convert_case = "0.6"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0" 